--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <div id="instructions">Guess the Operator</div>
     <div id="numbers">
         <div id="number1" class="number-holder flex-centered">25</div>
-        <div>?</div>
+        <div>.</div>
         <div id="number2" class="number-holder flex-centered">32</div>
         <div>=</div>
         <div id="number3" class="number-holder flex-centered">32</div>
